# kubeforward

./: .gitignore  CMakeLists.txt  Makefile  README.md  agents.md  go.mod  kubeforward.yml  vcpkg.json
.ai/: README.md  claims.yaml  skills.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_request.yml
.github/workflows/: bump-homebrew-tap.yml  bump-scoop-bucket.yml  release.yml
cmd/kubeforward/: main.cpp  main.go
docs/: config-schema.md  issue-triage.md  maintainer.md  vscode.md
include/kubeforward/: cli.h
include/kubeforward/config/: loader.h  types.h
include/kubeforward/runtime/: process_runner.h  resolved_plan.h  session_conflicts.h  state_store.h
src/: main.cpp
src/cli/: cli.cpp
src/config/: loader.cpp
src/runtime/: process_runner.cpp  resolved_plan.cpp  session_conflicts.cpp  state_store.cpp
tests/: cli_plan_tests.cpp  config_loader_tests.cpp  kind_smoke.sh  runtime_process_runner_tests.cpp  runtime_resolved_plan_tests.cpp  runtime_session_conflicts_tests.cpp  runtime_state_store_tests.cpp
tests/fixtures/: annotations_passthrough.yaml  basic.json  basic.yaml  extends_with_child_overrides.yaml  extends_with_defaults.yaml  extends_without_forwards.yaml  invalid_bind_ipv6.yaml  invalid_duplicate_ports.yaml  invalid_extends_cycle.yaml  invalid_production_inherited_detach.yaml  invalid_scalar_int.yaml  invalid_selector.yaml  kubeforward.yaml  resource_contexts.yaml
